--- a/SpringBootCRUD/pom.xml
+++ b/SpringBootCRUD/pom.xml
@@ -51,6 +51,10 @@
 			<artifactId>spring-restdocs-mockmvc</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+    		<groupId>com.google.code.gson</groupId>
+    		<artifactId>gson</artifactId>
+		</dependency>	
 	</dependencies>
 
 	<build>
